fix settings window
- previously I missed to include it on webpage

--- a/v2.html
+++ b/v2.html
@@ -109,6 +109,7 @@
 	<script src="tags/plugins/facepp.tag.html" type="riot/tag"></script>
 	<script src="tags/actionbar.tag.html" type="riot/tag"></script>
 	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
+	<script src="tags/settings-window.tag.html" type="riot/tag"></script>
 
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
 
