Update setting window
- UI interface
- Confirm with user on app start to load data from cache (if present)
- button to clean browser cache.
- option to change browser sync interval
- enable tooltip

--- a/v2.html
+++ b/v2.html
@@ -118,6 +118,10 @@
 		riot.mount("actionbar");
 		riot.mount("toolbox");
 		riot.mount("images-slider");
+
+		$(function () {
+			$('[data-toggle="tooltip"]').tooltip()
+		})
 	</script>
 	<script src="js/settings.js"></script>
 	<script src="js/thirdparty/svg.min.js"></script>
