--- a/v2.html
+++ b/v2.html
@@ -102,7 +102,7 @@
 				</div>
 			</div>
 			<div id="sidebar" class="p-2 overlay-color grey-border" style="width: 300px;">
-				<sidebar></sidebar>
+				<label-panel></label-panel>
 			</div>
 		</div>
 
@@ -128,6 +128,7 @@
 	<script src="tags/actionbar.tag.html" type="riot/tag"></script>
 	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
 	<script src="tags/settings-window.tag.html" type="riot/tag"></script>
+	<script src="tags/label-panel.tag.html" type="riot/tag"></script>
 
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
 
