Make the feature point list sortable

--- a/v2.html
+++ b/v2.html
@@ -54,6 +54,7 @@
 	<script src="js/thirdparty/Blob.js"></script>
 	<script src="js/thirdparty/FileSaver.min.js"></script>
 	<script src="js/thirdparty/fxp.js"></script>
+	<script src="js/thirdparty/jquery-ui.min.js"></script>
 
 
 </head>
