save project file as nimn format

--- a/v2.html
+++ b/v2.html
@@ -55,6 +55,7 @@
 	<script src="js/thirdparty/FileSaver.min.js"></script>
 	<script src="js/thirdparty/fxp.js"></script>
 	<script src="js/thirdparty/jquery-ui.min.js"></script>
+	<script src="js/thirdparty/nimn.js"></script>
 
 
 </head>
@@ -156,6 +157,7 @@
 	<script src="js/openfile.js"></script>
 	<script src="js/dlib.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/nimnObjStructure.js"></script>
 </body>
 
 </html>
