--- a/index.html
+++ b/index.html
@@ -1,194 +1,163 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="img/favicons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+	<link rel="manifest" href="img/favicons/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+		
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119603824-1"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
 
-	  gtag('config', 'UA-119603824-1');
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-119603824-1');
 	</script>
 
-	<title>ImgLab</title>
+	<title>ImgLab - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/slider.css">
+	<link rel="stylesheet" href="css/slider.1.css">
+	<link rel="stylesheet" href="css/tags.css">
+	<link rel="stylesheet" href="css/svg.select.min.css">
+	<link rel="stylesheet" href="css/svg.css">
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap-switch.min.css">
-	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="css/snackbar.css">
+	<link rel="stylesheet" href="css/menu.css">
+	<link rel="stylesheet" href="css/fontello.css">
 
-	<script src="js/thirdparty/jquery.min.js" ></script>
-	<script src="js/thirdparty/bootstrap-switch.min.js"></script>
-	<script src="js/thirdparty/jsplumb.min.js"></script>
+	<script src="js/thirdparty/jquery.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
 	<script src="js/thirdparty/bootstrap.min.js"></script>
+	<script src="js/thirdparty/riot.min.js"></script>
+
 	<script src="js/thirdparty/Blob.js"></script>
 	<script src="js/thirdparty/FileSaver.min.js"></script>
 	<script src="js/thirdparty/fxp.js"></script>
-
-
-
+	<script src="js/thirdparty/jquery-ui.min.js"></script>
+	<script src="js/thirdparty/nimn.js"></script>
 
 
 </head>
+
 <body>
-            <a href="https://github.com/NaturalIntelligence/imglab"><img class="bring-up" style="position: absolute; top: 0; left: 0; border: 0;" src="img/githubribon.png" alt="Fork me on GitHub"></a>
-<h1 style="text-align: center;"> ImgLab</h1>
-<p style="text-align: center;">This is the webbased tool to label images with boxes and landmarks. You can also use Face++ API to prepopulate the points and then adjust them to improve the position by dragging them.</p>
-
-<div class="container">
-	<div class="row">
-	    <div class="col-sm-8">
-
-		    <div class="input-group">
-				<input class="form-control" type="text" id="image_url" name="image_url" placeholder="Image URL">
-		      <span class="input-group-btn">
-		        <button class="btn btn-outline-info" type="button" id="imgUrlBtn">Show</button>
-		      </span>
+	<div class="container-fluid">
+		<div id="menubar" class="row overlay-color align-items-center" style="height: 50px;">
+			<div class="col-3 col-sm-2 col-md-1 col-xl-1 no-pl">
+				<menu-dropdown></menu-dropdown>
 			</div>
-		</div>
-		<div class="col-sm-2">
-			<label class="btn-bs-file btn btn-outline-info">Browse Image files
-		        <input type="file" id="image_file" accept="image/*"  onchange="readImageFiles(this)"  multiple/>
-		    </label>
-	    </div>
-	    <div class="col-sm-2">
-			<label class="btn-bs-file btn btn-outline-info">Browse Image folder
-				<input type="file" id="image_folder" webkitdirectory mozdirectory msdirectory odirectory directory onchange="readImageFiles(this)" >
-		    </label>
-	    </div>
-    </div>
-</div>
-
-<div class="input-bar clearfix">
-	<div class="left-paddle"></div>
-    <div class="photolist-wrapper">
-        <div class="photolist"></div>
-    </div>
-    <div class="right-paddle"></div>
-</div>
-
-<div class="alert" id="info"></div>
-
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-2" style="background-color: #e1e6ea">
-			<div id="ptnDtl" class="widget">
-				<h5>Point Detail</h5>
-				<input class="form-control form-control-sm" type="text" id="lbltxtbox" placeholder="Label">
-				<div class="row">
-					<div class="col">x: <span id="div_x"></span></div>
-					<div class="col">y: <span id="div_y"></span></div>
+			<div class="col-6 col-sm-6 col-md-7 col-xl-7text-center">
+				<!-- form-inline input-group -->
+				<div class="row justify-content-center align-content-center">
+					<a href="https://github.com/NaturalIntelligence/imglab">
+						<img src="img/imglab_logo.png" height="48px" style="margin-top: 2px">
+					</a>
+					<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
 				</div>
-				<input class="form-control form-control-sm" disabled type="text" id="ptnboxlbl" placeholder="Box Label">
-				
-				<hr>
 			</div>
-			<div id="boxDtl"  class="widget">
-				<h5>Box Detail</h5>
-				<input class="form-control form-control-sm" type="text" id="boxtxtbox" placeholder="Label">
-				<div class="row">
-					<div class="col">t: <span id="div_t"></span></div>
-					<div class="col">l: <span id="div_l"></span></div>
+			<div class="col-3 col-sm-4 col-md-4 col-xl-4">
+				<div class="form-inline flex-row-reverse float-right">
+					<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
+					<shortcuts class="d-none d-md-block"></shortcuts> 
+					<plugins-menu  class="d-none d-md-block"></plugins-menu>
 				</div>
-				<div class="row">
-					<div class="col">w: <span id="div_w"></span></div>
-					<div class="col">h: <span id="div_h"></span></div>
-				</div>
-				<hr>
 			</div>
 
-			<span id="imgdimentions"></span>
 		</div>
-		<div class="col-sm-8" >
-			<input type="checkbox" name="plotType" id="plotType" checked data-on-text="Box" data-off-text="Points">
-			<input type="button" class="btn btn-outline-danger btn-sm deleteBtn" value="Delete">
-			<input type="button" class="btn btn-outline-danger btn-sm" id="emptyBox" value="Empty">
-			<div style="height: 600px">
-				<div id="img_home">
-					<img id="img"/>
-					<!-- <canvas id="canvas"></canvas> -->
-					<div id="img_overlay"></div>
-					<span id="tooltip-span"></span>
-					<div id="v_line"></div>
-					<div id="h_line"></div>
-				</div>
-
-
-			</div>
-		</div>
-		<div class="col-sm-2" >
-			<h5>Time Saver </h5>
-			<small>Plot points using following methods and adjust them to improve the accuracy.</small>
-			<hr>
-			<input class="form-control" type="text" name="api_key" id="api_key" placeholder="api_key" />
-			<input class="form-control" type="text" name="api_secret" id="api_secret" placeholder="api_secret" />
-			<br>
-			<input class="btn btn-success" type="button" name="faceppBtn" id="faceppBtn" value="Face++" />
-
-
-			<hr>
-			<small>Select a file to read landmarks and face box position. (xml, json)</small><br>
-			<label id="loadDataFileBtn" class="btn-bs-file btn btn-outline-info">Browse
-
-			</label>
-			<input type="file" id="loadDataFileInput" style="display:none" value="Browse data file" accept=".fpp,.xml,.json" onchange="readPointsFile(this)" />
-
-			<hr>
-			<div class="sidebar">
-				<textarea id="actualData" ></textarea>
-				<input type="button" id="plotActualBtn" value="Plot on Image" />
-			</div>
-		</div>
+		<!-- End of Menubar -->
 	</div>
-</div>
+	<div class="flex-row">
+		<div class="d-flex flex-row" style="height: calc(100vh - 50px);">
+			<div id="toolbar" class="d-flex flex-column overlay-color grey-border">
+				<toolbox tools="labelling"></toolbox>
+				<toolbox class="mt-auto toolbox-border-top" tools="canvas"></toolbox>
+			</div>
+			<div class="d-flex flex-column base-color" style="width: 100vw">
+				<div>
+					<actionbar></actionbar>
+				</div>
+				<div>
+					<workarea></workarea>
+				</div>
+				<div class="grey-border mt-auto" style="height: 100px; width: 100%; margin: 0px 2px;">
+					<images-slider thumbnail_width="90px" class="mt-auto"></images-slider>
+				</div>
+			</div>
+			<div id="sidebar" class="p-2 overlay-color grey-border" style="width: 350px;">
+				<label-panel></label-panel>
+			</div>
+		</div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-sm-2 text-center">
-			<br><input class="btn btn-danger" type="button" id="clrPointsBtn" value="Clear all" />
-		</div>
-		<div class="col-sm-2 text-center">
-			<br><input class="btn btn-outline-primary" type="button" id="exportBtn" value="Save" />
-		</div>
-		<div class="col-sm-2 text-center">
-			<br><input class="btn btn-outline-primary" type="button" id="exportDlibBtn" value="Save as dlib format" />
-		</div>
-		<div class="col-sm-2 text-center">
-			<br><input class="btn btn-outline-primary" type="button" id="exportPtsBtn" value="Save PTS file" />
-		</div>
-		<div class="col-sm-2 text-center">
-			<br><input class="btn btn-outline-primary" disabled type="button" id="" value="placeholder" />
-		</div>
+		<div id="snackbar"></div>
+		<plugin-window></plugin-window>
 	</div>
-</div>
 
-	<script src="js/fileOperation.js"></script>
-	<script src="js/uiaction.js"></script>
-	<script src="js/widget.js"></script>
-	<script src="js/FaceBox.js"></script>
-	<script src="js/labels.js"></script>
-	<script src="js/labelFileLoader.js"></script>
-	<script src="js/dataloader.js"></script>
-	<script src="js/slider.js"></script>
-	<script src="js/Face++DataParser.js"></script>
-	<script src="js/dlibDataHandler.js"></script>
+
+
+	<script src="js/prompt.js"></script>
+	<script src="js/config.js"></script>
+	<!-- <script src="tags/tags.js"></script> -->
+	<script src="js/thirdparty/riot+compiler.min.js"></script>
+
+	<script src="tags/images-slider.tag.html" type="riot/tag"></script>
+	<script src="tags/menu.tag.html" type="riot/tag"></script>
+	<script src="tags/pluginsMenu.tag.html" type="riot/tag"></script>
+	<script src="tags/shortcuts.tag.html" type="riot/tag"></script>
+	<script src="tags/toolbox.tag.html" type="riot/tag"></script>
+	<script src="tags/workarea.tag.html" type="riot/tag"></script>
+	<script src="tags/pluginWindow.tag.html" type="riot/tag"></script>
+	<script src="tags/plugins/facepp.tag.html" type="riot/tag"></script>
+	<script src="tags/actionbar.tag.html" type="riot/tag"></script>
+	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
+	<script src="tags/settings-window.tag.html" type="riot/tag"></script>
+	<script src="tags/label-panel.tag.html" type="riot/tag"></script>
+
+	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
+
 	<script type="text/javascript">
-		$(function(){
-			$("[name='plotType']").bootstrapSwitch();
-			setTimeout(function(){
-                $.dialog({
-                    title: '',
-                    content: '<p>If you like my work, plz give me a '
-                    + '<a href="https://github.com/NaturalIntelligence/imglab/stargazers">star</a>'
-                    + ' on GitHub.</p>'
-                });
-            }, 10);
-		})
+		riot.mount("menu-dropdown, plugins-menu, shortcuts");
+		riot.mount("actionbar");
+		riot.mount("toolbox");
+		riot.mount("images-slider");
 
+		$(function () {
+			$('[data-toggle="tooltip"]').tooltip()
+		})
 	</script>
+	<script src="js/settings.js"></script>
+	<script src="js/thirdparty/svg.min.js"></script>
+	<script src="js/thirdparty/svg.draw.min.js"></script>
+	<script src="js/thirdparty/svg.select.min.js"></script>
+	<script src="js/thirdparty/svg.resize.min.js"></script>
+	<script src="js/thirdparty/svg.draggable.min.js"></script>
+	<!-- <script src="js/thirdparty/svg.panzoom.min.js"></script> -->
+	<script src="js/storePersistor.js"></script>
+	<script src="js/store.js"></script>
+	<script src="js/savefile.js"></script>
+	<script src="js/openfile.js"></script>
+	<script src="js/dlib.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/nimnObjStructure.js"></script>
 </body>
+
 </html>
