disable zoom toolbutton until implemented

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 	<script src="tags/label-panel.tag.html" type="riot/tag"></script>
 
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
+	<!-- <script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script> -->
 
 	<script type="text/javascript">
 		riot.mount("menu-dropdown, plugins-menu, shortcuts");
@@ -151,6 +152,7 @@
 	<script src="js/thirdparty/svg.resize.min.js"></script>
 	<script src="js/thirdparty/svg.draggable.min.js"></script>
 	<!-- <script src="js/thirdparty/svg.panzoom.min.js"></script> -->
+
 	<script src="js/storePersistor.js"></script>
 	<script src="js/store.js"></script>
 	<script src="js/savefile.js"></script>
