Add option to feed category for a shape

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<link rel="stylesheet" href="css/snackbar.css">
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/fontello.css">
+	<link rel="stylesheet" href="css/jquery-editable-select.min.css">
 
 	<script src="js/thirdparty/jquery.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
@@ -56,6 +57,7 @@
 	<script src="js/thirdparty/fxp.js"></script>
 	<script src="js/thirdparty/jquery-ui.min.js"></script>
 	<script src="js/thirdparty/nimn.js"></script>
+	<script src="js/thirdparty/jquery-editable-select.min.js"></script>
 
 
 </head>
