Add support for tags

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/fontello.css">
 	<link rel="stylesheet" href="css/jquery-editable-select.min.css">
+	<link rel="stylesheet" href="css/taggle.min.css">
 
 	<script src="js/thirdparty/jquery.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
@@ -58,6 +59,7 @@
 	<script src="js/thirdparty/jquery-ui.min.js"></script>
 	<script src="js/thirdparty/nimn.js"></script>
 	<script src="js/thirdparty/jquery-editable-select.min.js"></script>
+	<script src="js/thirdparty/taggle.min.js"></script>
 
 
 </head>
