--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div class="col-3 col-sm-2 col-md-1 col-xl-1 no-pl">
 				<menu-dropdown></menu-dropdown>
 			</div>
-			<div class="col-6 col-sm-6 col-md-7 col-xl-7text-center">
+			<div class="col-6 col-sm-6 col-md-7 col-xl-7 text-center">
 				<!-- form-inline input-group -->
 				<div class="row justify-content-center align-content-center">
 					<a href="https://github.com/NaturalIntelligence/imglab">
@@ -135,6 +135,7 @@
 	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
 	<script src="tags/settings-window.tag.html" type="riot/tag"></script>
 	<script src="tags/label-panel.tag.html" type="riot/tag"></script>
+	<script src="tags/attribute-row.tag.html" type="riot/tag"></script>
 
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
 	<!-- <script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script> -->
