Add support to COCO format

--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
 	<script src="js/dlib.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/nimnObjStructure.js"></script>
+
+	<script src="dataformaters/coco.js"></script>
 </body>
 
 </html>
