--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 	<script src="js/nimnObjStructure.js"></script>
 
 	<script src="dataformaters/coco.js"></script>
+	<script src="dataformaters/pascal_voc.js"></script>
 </body>
 
 </html>
