added featurePointSize to appConfig

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 	<script src="tags/attributes-list.tag.html" type="riot/tag"></script>
 
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
+	<script src="tags/actions/landmark-action.tag.html" type="riot/tag"></script>
 	<!-- <script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script> -->
 
 	<script type="text/javascript">
