moved dlib.js from js to dataformaters folder and changed its reference in index.html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	<script src="js/store.js"></script>
 	<script src="js/savefile.js"></script>
 	<script src="js/openfile.js"></script>
-	<script src="js/dlib.js"></script>
+	<script src="dataformaters/dlib.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/nimnObjStructure.js"></script>
 
