feat: included zoom-action.tag.html and svg-pan-zoom library

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-		
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119603824-1"></script>
 	<script>
@@ -82,7 +82,7 @@
 			<div class="col-3 col-sm-4 col-md-4 col-xl-4">
 				<div class="form-inline flex-row-reverse float-right">
 					<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
-					<shortcuts class="d-none d-md-block"></shortcuts> 
+					<shortcuts class="d-none d-md-block"></shortcuts>
 					<plugins-menu  class="d-none d-md-block"></plugins-menu>
 				</div>
 			</div>
@@ -138,7 +138,8 @@
 	<script src="tags/attributes-list.tag.html" type="riot/tag"></script>
 
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
-	<!-- <script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script> -->
+	<script src="tags/actions/landmark-action.tag.html" type="riot/tag"></script>
+	<script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script>
 
 	<script type="text/javascript">
 		riot.mount("menu-dropdown, plugins-menu, shortcuts");
@@ -156,7 +157,7 @@
 	<script src="js/thirdparty/svg.select.min.js"></script>
 	<script src="js/thirdparty/svg.resize.min.js"></script>
 	<script src="js/thirdparty/svg.draggable.min.js"></script>
-	<!-- <script src="js/thirdparty/svg.panzoom.min.js"></script> -->
+	<script src="js/thirdparty/svg-pan-zoom.min.js"></script>
 
 	<script src="js/storePersistor.js"></script>
 	<script src="js/store.js"></script>
