--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/snackbar.css">
 	<link rel="stylesheet" href="css/menu.css">
-	<link rel="stylesheet" href="css/fontello.css">
+	<link rel="stylesheet" href="css/fontello.min.css">
 	<link rel="stylesheet" href="css/jquery-editable-select.min.css">
 	<link rel="stylesheet" href="css/taggle.min.css">
 
