--- a/index.html
+++ b/index.html
@@ -65,110 +65,127 @@
 </head>
 
 <body>
-	<div class="container-fluid">
-		<div id="menubar" class="row overlay-color align-items-center" style="height: 50px;">
-			<div class="col-3 col-sm-2 col-md-1 col-xl-1 no-pl">
-				<menu-dropdown></menu-dropdown>
-			</div>
-			<div class="col-6 col-sm-6 col-md-7 col-xl-7 text-center">
-				<!-- form-inline input-group -->
-				<div class="row justify-content-center align-content-center">
-					<a href="https://github.com/NaturalIntelligence/imglab">
-						<img src="img/imglab_logo.png" height="48px" style="margin-top: 2px">
-					</a>
-					<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
-				</div>
-			</div>
-			<div class="col-3 col-sm-4 col-md-4 col-xl-4">
-				<div class="form-inline flex-row-reverse float-right">
-					<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
-					<shortcuts class="d-none d-md-block"></shortcuts>
-					<plugins-menu  class="d-none d-md-block"></plugins-menu>
-				</div>
-			</div>
+    <div class="container-fluid">
+        <div id="menubar" class="row overlay-color align-items-center" style="height: 50px;">
+            <div class="col-3 col-sm-2 col-md-1 col-xl-1 no-pl">
+                <menu-dropdown></menu-dropdown>
+            </div>
+            <div class="col-6 col-sm-6 col-md-7 col-xl-7 text-center">
+                <!-- form-inline input-group -->
+                <div class="row justify-content-center align-content-center">
+                    <a href="https://github.com/NaturalIntelligence/imglab">
+                        <img src="img/imglab_logo.png" height="48px" style="margin-top: 2px">
+                    </a>
+                    <span style="font-size: 2em; margin-top:5px;">Img Lab</span>
+                </div>
+            </div>
+            <div class="col-3 col-sm-4 col-md-4 col-xl-4">
+                <div class="form-inline flex-row-reverse float-right">
+                    <a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
+                    <shortcuts class="d-none d-md-block"></shortcuts>
+                    <plugins-menu class="d-none d-md-block"></plugins-menu>
+                </div>
+            </div>
 
-		</div>
-		<!-- End of Menubar -->
-	</div>
-	<div class="flex-row">
-		<div class="d-flex flex-row" style="height: calc(100vh - 50px);">
-			<div id="toolbar" class="d-flex flex-column overlay-color grey-border">
-				<toolbox tools="labelling"></toolbox>
-				<toolbox class="mt-auto toolbox-border-top" tools="canvas"></toolbox>
-			</div>
-			<div class="d-flex flex-column base-color" style="width: 100vw">
-				<div>
-					<actionbar></actionbar>
-				</div>
-				<div>
-					<workarea></workarea>
-				</div>
-				<div class="grey-border mt-auto" style="height: 100px; width: 100%; margin: 0px 2px;">
-					<images-slider thumbnail_width="90px" class="mt-auto"></images-slider>
-				</div>
-			</div>
-			<div id="sidebar" class="p-2 overlay-color grey-border" style="width: 350px;">
-				<label-panel></label-panel>
-			</div>
-		</div>
+        </div>
+        <!-- End of Menubar -->
+    </div>
+    <div class="flex-row">
+        <div class="d-flex flex-row" style="height: calc(100vh - 50px);">
+            <div id="toolbar" class="d-flex flex-column overlay-color grey-border">
+                <toolbox tools="labelling"></toolbox>
+                <toolbox class="mt-auto toolbox-border-top" tools="canvas"></toolbox>
+            </div>
+            <div class="d-flex flex-column base-color" style="width: 100vw">
+                <div>
+                    <actionbar></actionbar>
+                </div>
+                <div>
+                    <workarea></workarea>
+                </div>
+                <div class="grey-border mt-auto" style="height: 100px; width: 100%; margin: 0px 2px;">
+                    <images-slider thumbnail_width="90px" class="mt-auto"></images-slider>
+                </div>
+            </div>
+            <div id="sidebar" class="p-2 overlay-color grey-border" style="width: 350px;">
+                <label-panel></label-panel>
+            </div>
+        </div>
 
-		<div id="snackbar"></div>
-		<plugin-window></plugin-window>
-	</div>
+        <div id="snackbar"></div>
+        <plugin-window></plugin-window>
+    </div>
 
 
 
-	<script src="js/prompt.js"></script>
-	<script src="js/config.js"></script>
-	<!-- <script src="tags/tags.js"></script> -->
-	<script src="js/thirdparty/riot+compiler.min.js"></script>
+    <script src="js/prompt.js"></script>
+    <script src="js/config.js"></script>
+    <!-- <script src="tags/tags.js"></script> -->
+    <script src="js/thirdparty/riot+compiler.min.js"></script>
 
-	<script src="tags/images-slider.tag.html" type="riot/tag"></script>
-	<script src="tags/menu.tag.html" type="riot/tag"></script>
-	<script src="tags/pluginsMenu.tag.html" type="riot/tag"></script>
-	<script src="tags/shortcuts.tag.html" type="riot/tag"></script>
-	<script src="tags/toolbox.tag.html" type="riot/tag"></script>
-	<script src="tags/workarea.tag.html" type="riot/tag"></script>
-	<script src="tags/pluginWindow.tag.html" type="riot/tag"></script>
-	<script src="tags/plugins/facepp.tag.html" type="riot/tag"></script>
-	<script src="tags/actionbar.tag.html" type="riot/tag"></script>
-	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
-	<script src="tags/settings-window.tag.html" type="riot/tag"></script>
-	<script src="tags/label-panel.tag.html" type="riot/tag"></script>
-	<script src="tags/attributes-list.tag.html" type="riot/tag"></script>
+    <script src="tags/images-slider.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/menu.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/pluginsMenu.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/shortcuts.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/toolbox.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/workarea.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/pluginWindow.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/plugins/facepp.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/actionbar.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/trackinglines.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/settings-window.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/label-panel.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/attributes-list.tag.html" type="riot/tag">
+    </script>
 
-	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
-	<script src="tags/actions/landmark-action.tag.html" type="riot/tag"></script>
-	<script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script>
+    <script src="tags/actions/lightbulb-action.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/actions/landmark-action.tag.html" type="riot/tag">
+    </script>
+    <script src="tags/actions/zoom-action.tag.html" type="riot/tag">
+    </script>
 
-	<script type="text/javascript">
-		riot.mount("menu-dropdown, plugins-menu, shortcuts");
-		riot.mount("actionbar");
-		riot.mount("toolbox");
-		riot.mount("images-slider");
+    <script type="text/javascript">
+        riot.mount("menu-dropdown, plugins-menu, shortcuts");
+        riot.mount("actionbar");
+        riot.mount("toolbox");
+        riot.mount("images-slider");
 
-		$(function () {
-			$('[data-toggle="tooltip"]').tooltip()
-		})
-	</script>
-	<script src="js/settings.js"></script>
-	<script src="js/thirdparty/svg.min.js"></script>
-	<script src="js/thirdparty/svg.draw.min.js"></script>
-	<script src="js/thirdparty/svg.select.min.js"></script>
-	<script src="js/thirdparty/svg.resize.min.js"></script>
-	<script src="js/thirdparty/svg.draggable.min.js"></script>
-	<script src="js/thirdparty/svg-pan-zoom.min.js"></script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
+    <script src="js/settings.js"></script>
+    <script src="js/thirdparty/svg.min.js"></script>
+    <script src="js/thirdparty/svg.draw.min.js"></script>
+    <script src="js/thirdparty/svg.select.min.js"></script>
+    <script src="js/thirdparty/svg.resize.min.js"></script>
+    <script src="js/thirdparty/svg.draggable.min.js"></script>
+    <script src="js/thirdparty/svg-pan-zoom.min.js"></script>
 
-	<script src="js/storePersistor.js"></script>
-	<script src="js/store.js"></script>
-	<script src="js/savefile.js"></script>
-	<script src="js/openfile.js"></script>
-	<script src="js/dlib.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/nimnObjStructure.js"></script>
+    <script src="js/storePersistor.js"></script>
+    <script src="js/store.js"></script>
+    <script src="js/savefile.js"></script>
+    <script src="js/openfile.js"></script>
+    <script src="js/dlib.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/nimnObjStructure.js"></script>
 
-	<script src="dataformaters/coco.js"></script>
-	<script src="dataformaters/pascal_voc.js"></script>
+    <script src="dataformaters/coco.js"></script>
+    <script src="dataformaters/pascal_voc.js"></script>
+    <script src="dataformaters/yolo.js"></script>
 </body>
 
 </html>
