Working web labeling tool

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119603824-1"></script>
+<!-- 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119603824-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -31,9 +31,9 @@
 		gtag('js', new Date());
 
 		gtag('config', 'UA-119603824-1');
-	</script>
+	</script> -->
 
-	<title>ImgLab - Image Annotation tool</title>
+	<title>BeeNest - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slider.1.css">
@@ -74,16 +74,16 @@
 			<div class="col-6 col-sm-6 col-md-7 col-xl-7 text-center">
 				<!-- form-inline input-group -->
 				<div class="row justify-content-center align-content-center">
-					<a href="https://github.com/NaturalIntelligence/imglab">
-						<img src="img/imglab_logo.png" height="48px" style="margin-top: 2px">
-					</a>
-					<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
+<!-- 					<a href="http://www.todview.com">
+						<img src="img/icons/bee.svg" height="48px" style="margin-top: 2px">
+					</a> -->
+					<span style="font-size: 2em; margin-top:5px;">BEE NEST</span>
 				</div>
 			</div>
 			<div class="col-3 col-sm-4 col-md-4 col-xl-4">
 				<div class="form-inline flex-row-reverse float-right">
-					<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
-					<shortcuts class="d-none d-md-block"></shortcuts>
+<!-- 					<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
+ -->					<shortcuts class="d-none d-md-block"></shortcuts>
 					<plugins-menu  class="d-none d-md-block"></plugins-menu>
 				</div>
 			</div>
@@ -164,14 +164,14 @@
 
 	<script src="js/storePersistor.js"></script>
 	<script src="js/store.js"></script>
-	<script src="js/savefile.js"></script>
+<!-- 	<script src="js/savefile.js"></script>
 	<script src="js/openfile.js"></script>
-	<script src="js/dlib.js"></script>
+	<script src="js/dlib.js"></script> -->
 	<script src="js/app.js"></script>
-	<script src="js/nimnObjStructure.js"></script>
+<!-- 	<script src="js/nimnObjStructure.js"></script> -->
 
-	<script src="dataformaters/coco.js"></script>
-	<script src="dataformaters/pascal_voc.js"></script>
+<!-- 	<script src="dataformaters/coco.js"></script>
+	<script src="dataformaters/pascal_voc.js"></script> -->
 </body>
 
 </html>
