--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 	<script src="js/thirdparty/riot.min.js"></script>
 
 	<script src="js/thirdparty/Blob.js"></script>
-	<script src="js/thirdparty/FileSaver.min.js"></script>
+	<!-- <script src="js/thirdparty/FileSaver.min.js"></script> -->
 	<script src="js/thirdparty/fxp.js"></script>
 	<script src="js/thirdparty/jquery-ui.min.js"></script>
 	<script src="js/thirdparty/nimn.js"></script>
