--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 	<script src="js/thirdparty/jquery.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
 	<script src="js/thirdparty/bootstrap.min.js"></script>
-	<script src="js/thirdparty/riot.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.12.0/riot.min.js"></script>
 
 	<script src="js/thirdparty/Blob.js"></script>
 	<!-- <script src="js/thirdparty/FileSaver.min.js"></script> -->
@@ -122,7 +122,7 @@
 	<script src="js/prompt.js"></script>
 	<script src="js/config.js"></script>
 	<!-- <script src="tags/tags.js"></script> -->
-	<script src="js/thirdparty/riot+compiler.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.12.0/riot+compiler.min.js"></script>
 
 	<script src="tags/images-slider.tag.html" type="riot/tag"></script>
 	<script src="tags/menu.tag.html" type="riot/tag"></script>
