--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
@@ -77,7 +78,7 @@
 <!-- 					<a href="http://www.todview.com">
 						<img src="img/icons/bee.svg" height="48px" style="margin-top: 2px">
 					</a> -->
-					<span style="font-size: 2em; margin-top:5px;">BEE NEST</span>
+					<span style="font-size: 2em; margin-top:5px;">玉蜂谷</span>
 				</div>
 			</div>
 			<div class="col-3 col-sm-4 col-md-4 col-xl-4">
