--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<link rel="stylesheet" href="css/fontello.min.css">
 	<link rel="stylesheet" href="css/jquery-editable-select.min.css">
 	<link rel="stylesheet" href="css/taggle.min.css">
+	<link rel="stylesheet" href="css/spectrum.css">
 
 	<script src="js/thirdparty/jquery.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
@@ -60,6 +61,7 @@
 	<script src="js/thirdparty/nimn.js"></script>
 	<script src="js/thirdparty/jquery-editable-select.min.js"></script>
 	<script src="js/thirdparty/taggle.min.js"></script>
+	<script src="js/thirdparty/spectrum.js"></script>
 
 
 </head>
@@ -140,6 +142,7 @@
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/landmark-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script>
+	<script src="tags/actions/colorpicker-action.tag.html" type="riot/tag"></script>
 
 	<script type="text/javascript">
 		riot.mount("menu-dropdown, plugins-menu, shortcuts");
