add auditing panel

--- a/app/index.html
+++ b/app/index.html
@@ -144,6 +144,7 @@
 	<script src="tags/actions/landmark-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/beenest-action.tag.html" type="riot/tag"></script>
+	<script src="tags/actions/auditing-action.tag.html" type="riot/tag"></script>
 
 	<script type="text/javascript">
 		riot.mount("menu-dropdown, plugins-menu, shortcuts");
