Remove unused dependencies

--- a/app/index.html
+++ b/app/index.html
@@ -21,19 +21,6 @@
 	<meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119603824-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-119603824-1');
-	</script> -->
-
 	<title>BeeNest - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.css">
@@ -54,11 +41,11 @@
 	<script src="js/thirdparty/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.12.0/riot.min.js"></script>
 
-	<script src="js/thirdparty/Blob.js"></script>
+	<!-- <script src="js/thirdparty/Blob.js"></script> -->
 	<!-- <script src="js/thirdparty/FileSaver.min.js"></script> -->
-	<script src="js/thirdparty/fxp.js"></script>
+	<!-- <script src="js/thirdparty/fxp.js"></script> -->
 	<script src="js/thirdparty/jquery-ui.min.js"></script>
-	<script src="js/thirdparty/nimn.js"></script>
+	<!-- <script src="js/thirdparty/nimn.js"></script> -->
 	<script src="js/thirdparty/jquery-editable-select.min.js"></script>
 	<script src="js/thirdparty/taggle.min.js"></script>
 
@@ -120,7 +107,7 @@
 
 
 
-	<script src="js/prompt.js"></script>
+	<!-- <script src="js/prompt.js"></script> -->
 	<script src="js/config.js"></script>
 	<!-- <script src="tags/tags.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.12.0/riot+compiler.min.js"></script>
