Fix typo and disable tool-zoom

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 	<meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<title>BeeNest - Image Annotation tool</title>
+	<title>BeeHive - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slider.1.css">
