Add minified version of menu.css and updating refernce in inedx.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/snackbar.css">
-	<link rel="stylesheet" href="css/menu.css">
+	<link rel="stylesheet" href="css/menu.min.css">
 	<link rel="stylesheet" href="css/fontello.min.css">
 	<link rel="stylesheet" href="css/jquery-editable-select.min.css">
 	<link rel="stylesheet" href="css/taggle.min.css">
