Add minified version of style.css and updating refernce in inedx.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<title>ImgLab - Image Annotation tool</title>
 
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="stylesheet" href="css/slider.1.css">
 	<link rel="stylesheet" href="css/tags.css">
 	<link rel="stylesheet" href="css/svg.select.min.css">
