--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<title>ImgLab - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="stylesheet" href="css/slider.1.css">
+	<link rel="stylesheet" href="css/slider.1.min.css">
 	<link rel="stylesheet" href="css/tags.css">
 	<link rel="stylesheet" href="css/svg.select.min.css">
 	<link rel="stylesheet" href="css/svg.css">
