--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="stylesheet" href="css/slider.1.min.css">
-	<link rel="stylesheet" href="css/tags.css">
+	<link rel="stylesheet" href="css/tags.min.css">
 	<link rel="stylesheet" href="css/svg.select.min.css">
 	<link rel="stylesheet" href="css/svg.css">
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
