Add minified version of svg.css and updating refernce in inedx.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<link rel="stylesheet" href="css/slider.1.min.css">
 	<link rel="stylesheet" href="css/tags.min.css">
 	<link rel="stylesheet" href="css/svg.select.min.css">
-	<link rel="stylesheet" href="css/svg.css">
+	<link rel="stylesheet" href="css/svg.min.css">
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/snackbar.css">
