--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<link rel="stylesheet" href="css/svg.min.css">
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/snackbar.css">
+	<link rel="stylesheet" href="css/snackbar.min.css">
 	<link rel="stylesheet" href="css/menu.min.css">
 	<link rel="stylesheet" href="css/fontello.min.css">
 	<link rel="stylesheet" href="css/jquery-editable-select.min.css">
