Update static files

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 	<script src="js/thirdparty/jquery.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
 	<script src="js/thirdparty/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.12.0/riot.min.js"></script>
+	<script src="js/thirdparty/riot.min.js"></script>
 
 	<!-- <script src="js/thirdparty/Blob.js"></script> -->
 	<!-- <script src="js/thirdparty/FileSaver.min.js"></script> -->
@@ -49,7 +49,7 @@
 	<script src="js/thirdparty/jquery-editable-select.min.js"></script>
 	<script src="js/thirdparty/taggle.min.js"></script>
 
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="js/thirdparty/axios.min.js"></script>
 
 </head>
 
@@ -110,7 +110,7 @@
 	<!-- <script src="js/prompt.js"></script> -->
 	<script src="js/config.js"></script>
 	<!-- <script src="tags/tags.js"></script> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.12.0/riot+compiler.min.js"></script>
+	<script src="js/thirdparty/riot%2Bcompiler.min.js"></script>
 
 	<script src="tags/images-slider.tag.html" type="riot/tag"></script>
 	<script src="tags/menu.tag.html" type="riot/tag"></script>
@@ -157,6 +157,15 @@
 	<script src="js/openfile.js"></script>
 	<script src="js/dlib.js"></script> -->
 	<script src="js/app.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127177796-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-127177796-1');
+	</script>
 <!-- 	<script src="js/nimnObjStructure.js"></script> -->
 
 <!-- 	<script src="dataformaters/coco.js"></script>
