--- a/app/index.html
+++ b/app/index.html
@@ -157,6 +157,35 @@
 	<script src="js/openfile.js"></script>
 	<script src="js/dlib.js"></script> -->
 	<script src="js/app.js"></script>
+	<script type="text/javascript">
+
+    	var login = localStorage.getItem("beevalley_login");
+    	if (!login) {
+			var url = new URL(window.location.href);
+			var code = url.searchParams.get("code");
+			if (!code) {
+	    		var redirect_uri = encodeURIComponent("http://bee-valley.todview.com");
+	            var state = Math.ceil(Math.random()*1000);
+				window.location = 'https://open.weixin.qq.com/connect/qrconnect?appid=wx325f7c60ccdd70ed&redirect_uri='+redirect_uri+'&response_type=code&scope=snsapi_login&state='+state+'#wechat_redirect';
+			} else {
+				// TODO
+				  var instance = axiosClient();
+
+                  instance.post('/login/weixin/' + code)
+                  .then(function(response) {
+                        var token = response.data;
+                        console.log(token);
+
+                  })
+                  .catch(function (error) {
+                    console.log(error);
+                        alert('请求失败.');
+                  });
+
+			}
+
+    	}
+	</script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127177796-1"></script>
 	<script>
