--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 	<script src="dataformaters/dlib.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/nimnObjStructure.js"></script>
+	<script src="js/common-actions.js"></script>
 
 	<script src="dataformaters/coco.js"></script>
 	<script src="dataformaters/pascal_voc.js"></script>
