no longer calls twice

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 	<script src="tags/settings-window.tag.html" type="riot/tag"></script>
 	<script src="tags/label-panel.tag.html" type="riot/tag"></script>
 	<script src="tags/attributes-list.tag.html" type="riot/tag"></script>
-	<script src="js/common-actions.js"></script>
+	<script src="js/common-actions.js" type="riot/tag"></script>
 
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/landmark-action.tag.html" type="riot/tag"></script>
