--- a/index.html
+++ b/index.html
@@ -115,13 +115,14 @@
 		<plugin-window></plugin-window>
 	</div>
 
-
+	<cookie-alert></cookie-alert>
 
 	<script src="js/prompt.js"></script>
 	<script src="js/config.js"></script>
 	<!-- <script src="tags/tags.js"></script> -->
 	<script src="js/thirdparty/riot+compiler.min.js"></script>
 
+	<script src="tags/cookie-alert.tag.html" type="riot/tag"></script>
 	<script src="tags/images-slider.tag.html" type="riot/tag"></script>
 	<script src="tags/menu.tag.html" type="riot/tag"></script>
 	<script src="tags/pluginsMenu.tag.html" type="riot/tag"></script>
@@ -143,6 +144,7 @@
 
 	<script type="text/javascript">
 		eventBus = riot.observable();
+        riot.mount("cookie-alert");
 		riot.mount("menu-dropdown, plugins-menu, shortcuts");
 		riot.mount("actionbar");
 		riot.mount("toolbox");
