add popup window on clicking URL icon

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 	<script src="tags/settings-window.tag.html" type="riot/tag"></script>
 	<script src="tags/label-panel.tag.html" type="riot/tag"></script>
 	<script src="tags/attributes-list.tag.html" type="riot/tag"></script>
+	<script src="tags/url-uploader-window.tag.html" type="riot/tag"></script>
 
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/landmark-action.tag.html" type="riot/tag"></script>
@@ -168,6 +169,7 @@
 	<script src="dataformaters/dlib.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/nimnObjStructure.js"></script>
+	<script src="js/urlUpload.js"></script>
 
 	<script src="dataformaters/coco.js"></script>
 	<script src="dataformaters/pascal_voc.js"></script>
