Button Resize that enlarges shapes Area with a function that usa a specific scale

--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
 	<div class="flex-row">
 		<div class="d-flex flex-row" style="height: calc(100vh - 50px);">
 			<div id="toolbar" class="d-flex flex-column overlay-color grey-border">
-				<toolbox tools="labelling"></toolbox>
+				<toolbox tools="labelling">
+
+
+
+				</toolbox>
 				<toolbox class="mt-auto toolbox-border-top" tools="canvas"></toolbox>
 			</div>
 			<div class="d-flex flex-column base-color" style="width: 100vw">
@@ -137,6 +141,7 @@
 	<script src="tags/label-panel.tag.html" type="riot/tag"></script>
 	<script src="tags/attributes-list.tag.html" type="riot/tag"></script>
 
+  <script src="tags/actions/10px-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/landmark-action.tag.html" type="riot/tag"></script>
 	<script src="tags/actions/zoom-action.tag.html" type="riot/tag"></script>
