give feature summary at the time of loading the app

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/snackbar.min.css">
 	<link rel="stylesheet" href="css/menu.min.css">
-	<link rel="stylesheet" href="css/fontello.min.css">
+	<link rel="stylesheet" href="css/imglabfonts.css">
 	<link rel="stylesheet" href="css/jquery-editable-select.min.css">
 	<link rel="stylesheet" href="css/taggle.min.css">
 
@@ -171,6 +171,7 @@
 
 	<script src="dataformaters/coco.js"></script>
 	<script src="dataformaters/pascal_voc.js"></script>
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
