--- a/index.html
+++ b/index.html
@@ -20,17 +20,14 @@
 	<meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119603824-1"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PRLM5STD53"></script>
 	<script>
-		window.dataLayer = window.dataLayer || [];
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-119603824-1');
+	  gtag('config', 'G-PRLM5STD53');
 	</script>
 
 	<title>ImgLab - Image Annotation tool</title>
