--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	window.location.replace("https://solothought.com/products/imglab/");
+	
 	<link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
@@ -31,7 +31,9 @@
 	  gtag('config', 'G-PRLM5STD53');
 	</script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4922790412146333" crossorigin="anonymous"></script>
-	
+	<script>
+		window.location.replace("https://solothought.com/products/imglab/");
+	</script>
 	<title>ImgLab - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.min.css">
