--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4922790412146333" crossorigin="anonymous"></script>
 	<script>
-		window.location.replace("https://solothought.com/products/imglab/");
+		window.location.replace("https://solothought.com/imglab/");
 	</script>
 	<title>ImgLab - Image Annotation tool</title>
 
