added yolo export feature

--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
 	  gtag('config', 'G-PRLM5STD53');
 	</script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4922790412146333" crossorigin="anonymous"></script>
-	<script>
-		window.location.replace("https://solothought.com/imglab/");
-	</script>
 	<title>ImgLab - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.min.css">
@@ -157,6 +154,7 @@
 	</script>
 	<script src="js/settings.js"></script>
 	<script src="js/thirdparty/svg.min.js"></script>
+	<script src="js/thirdparty/jszip.min.js"></script>
 	<script src="js/thirdparty/svg.draw.min.js"></script>
 	<script src="js/thirdparty/svg.select.min.js"></script>
 	<script src="js/thirdparty/svg.resize.min.js"></script>
