--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 	  gtag('config', 'G-PRLM5STD53');
 	</script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4922790412146333" crossorigin="anonymous"></script>
+	<script>
+		window.location.replace("https://solothought.com/imglab/");
+	</script>
 	<title>ImgLab - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.min.css">
