--- a/index.html
+++ b/index.html
@@ -22,18 +22,16 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PRLM5STD53"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4812VFLT3M"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
-	  gtag('config', 'G-PRLM5STD53');
+	  gtag('config', 'G-4812VFLT3M');
 	</script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4922790412146333" crossorigin="anonymous"></script>
-	<script>
-		window.location.replace("https://solothought.com/imglab/");
-	</script>
+
 	<title>ImgLab - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.min.css">
